--- a/style.css
+++ b/style.css
@@ -1,600 +1,607 @@
 :root {
-    --bg-color: black;
-    --text: #252525;
-    --sliders: #D8D5CE;
-    --minHeader: 10vh;
-    --minHeaderMobile: 5vh;
-    --margin: 3vw;
-    --marginMobile: 4vw;
+  --bg-color: black;
+  --text: #252525;
+  --sliders: #d8d5ce;
+  --minHeader: 10vh;
+  --minHeaderMobile: 5vh;
+  --margin: 3vw;
+  --marginMobile: 4vw;
 
-    --desktopFontSize: calc(11px + 0.390625vw);
-    --mobileFontSize: calc(15px + 0.390625vw);
-    ;
-    --marginTop: 5vh;
+  --desktopFontSize: calc(11px + 0.390625vw);
+  --mobileFontSize: calc(15px + 0.390625vw);
+  --marginTop: 5vh;
 }
 
-
 @font-face {
-    font-family: "AkkuratPro-Light";
-    src: url("data/fonts/Akkurat_Pro_Light.woff") format("woff");
+  font-family: "AkkuratPro-Light";
+  src: url("data/fonts/Akkurat_Pro_Light.woff") format("woff");
 }
 
 #cursor {
-    position: fixed;
-    background-color: #D7D6D4;
-    width: 2em;
-    height: 2em;
-    border-radius: 100%;
-    mix-blend-mode: difference;
-    pointer-events: none;
-    transition: width .2s ease-in-out, height .2s ease-in-out;
-    transform: translate(-50%, -50%);
-    z-index: 300;
+  position: fixed;
+  background-color: #d7d6d4;
+  width: 2em;
+  height: 2em;
+  border-radius: 100%;
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
+  transform: translate(-50%, -50%);
+  z-index: 300;
 }
 
 #cursor.active {
-    width: 6em;
-    height: 6em;
+  width: 6em;
+  height: 6em;
 }
 
 .link-container {
-    position: relative;
+  position: relative;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-    overscroll-behavior-y: contain;
+  overscroll-behavior-y: contain;
 }
 
 body {
-    background-color: var(--bg-color);
-    font-family: "AkkuratPro-Light";
-    padding: 0;
-    margin: 0;
+  background-color: var(--bg-color);
+  font-family: "AkkuratPro-Light";
+  padding: 0;
+  margin: 0;
 }
 
 main {
-    position: relative;
+  position: relative;
 }
 
-
-
 .progress {
-    background-color: var(--text);
-    position: absolute;
-    z-index: -1;
-    mix-blend-mode: multiply;
+  background-color: var(--text);
+  position: absolute;
+  z-index: -1;
+  mix-blend-mode: multiply;
 }
 
 .divTop,
 .divBottom,
 .divRight,
 .divLeft {
-    z-index: 500 !important;
+  z-index: 500 !important;
 }
 
 .active-track {
-    font-weight: bold;
-  }
-  
+  font-weight: bold;
+}
 
 .divTop {
-    position: absolute;
-    top: 30px;
+  position: absolute;
+  top: 30px;
 }
 
 .divBottom {
-    position: absolute;
-    bottom: 30px;
+  position: absolute;
+  bottom: 30px;
 }
-
-
 
 .divTop div:last-child,
 .divBottom div:last-child {
-    border-right: none !important;
+  border-right: none !important;
 }
 
 .divRight {
-    position: absolute;
-    right: 0;
+  position: absolute;
+  right: 0;
 }
 
 .divLeft {
-    position: absolute;
-    left: 0;
+  position: absolute;
+  left: 0;
 }
 
 .divRight,
 .divLeft {
-    position: absolute;
-    top: 0;
-    height: calc(var(--vh, 1h)* 100);
-    width: 60px;
-    display: grid;
-    grid-template-rows: repeat(7, 1fr);
-    align-items: center;
+  position: absolute;
+  top: 0;
+  height: calc(var(--vh, 1h) * 100);
+  width: 60px;
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+  align-items: center;
 }
 
 .divTop,
 .divBottom {
-    width: 100vw;
-    height: 60px;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    align-items: center;
+  width: 100vw;
+  height: 60px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  align-items: center;
 }
-
 
 .divTop div,
 .divBottom div {
-    border-right: 1px solid white;
-    height: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all .2s ease-in-out
+  border-right: 1px solid white;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease-in-out;
 }
 
 .divRight div,
 .divLeft div {
-    border-top: 1px solid white;
-    height: 100%;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all .2s ease-in-out
+  border-top: 1px solid white;
+  height: 100%;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease-in-out;
 }
-
-
 
 .divRight div:hover,
 .divLeft div:hover,
 .divRight div.active,
 .divLeft div.active {
-    width: 100%;
-    border-top: 3px solid #ED1C24;
-    transition: all .2s ease-in-out;
+  width: 100%;
+  border-top: 3px solid #ed1c24;
+  transition: all 0.2s ease-in-out;
 }
 
 .divTop div:hover,
 .divBottom div:hover,
 .divTop div.active,
 .divBottom div.active {
-    height: 100%;
-    border-right: 3px solid #ED1C24;
-    transition: all .2s ease-in-out;
+  height: 100%;
+  border-right: 3px solid #ed1c24;
+  transition: all 0.2s ease-in-out;
 }
-
 
 .divRight div:first-child,
 .divLeft div:first-child {
-    border: none !important;
+  border: none !important;
 }
 
 .divRight {
-    justify-items: end;
+  justify-items: end;
 }
 
 .divLeft {
-    justify-items: start;
+  justify-items: start;
 }
 
 #progressTop {
-    left: 0;
-    height: 100%;
+  left: 0;
+  height: 100%;
 }
 
 .slider p {
-    color: white;
+  color: white;
 }
 
 .divRight p {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 #progressRight {
-    bottom: 0;
-    width: 100%;
+  bottom: 0;
+  width: 100%;
 }
 
 .divRight p {
-    transform-origin: center;
-    text-align: center;
-    padding: 0;
-    margin: 0;
+  transform-origin: center;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 #progressBottom {
-    left: 0;
-    height: 100%;
+  left: 0;
+  height: 100%;
 }
 
 #progressLeft {
-    bottom: 0;
-    width: 100%;
+  bottom: 0;
+  width: 100%;
 }
 
 .divLeft p,
 .divRight p {
-    transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 
 .track {
-    padding: 50px;
-    height: calc(var(--vh, 1h)*100 - 100px);
-    width: calc(100vw - 100px);
+  padding: 50px;
+  height: calc(var(--vh, 1h) * 100 - 100px);
+  width: calc(100vw - 100px);
 }
 
 .track video {
-    object-fit: cover;
-    height: calc(var(--vh, 1h)*100 - 100px);
-    width: calc(100vw - 100px);
+  object-fit: cover;
+  height: calc(var(--vh, 1h) * 100 - 100px);
+  width: calc(100vw - 100px);
 }
 
 .track video {
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: 0;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: 0;
 }
 
 .track .legenda {
-    mix-blend-mode: exclusion;
+  mix-blend-mode: exclusion;
 }
 
 .type {
-    padding: 30px;
+  padding: 30px;
 }
 
-
 .startButton {
-    text-align: center;
-    color: var(--text);
-    font-size: 20px;
-    line-height: 20px;
-    text-decoration: underline;
+  text-align: center;
+  color: var(--text);
+  font-size: 20px;
+  line-height: 20px;
+  text-decoration: underline;
 }
 
 #startButton {
-    fill: var(--text);
-    stroke: var(--text);
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-width: 2px;
-    width: calc(25px + 0.5vw);
-    position: absolute;
-    top: 50%;
-    right: 50%;
-    z-index: 200;
+  fill: var(--text);
+  stroke: var(--text);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2px;
+  width: calc(25px + 0.5vw);
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  z-index: 200;
 }
 
 .legendas {
-    mix-blend-mode: screen;
+  mix-blend-mode: screen;
 }
 
 .faixas {
+  display: flex;
+  width: calc(100% - 100px);
+  position: absolute;
+  bottom: 70px;
+  z-index: 50;
+  gap: 3vw;
+  justify-content: center;
+}
+
+.faixas p {
+  color: white;
+}
+
+.loading-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  color: var(--text);
+}
+
+@media screen and (max-width: 900px) {
+  #cursor {
+    display: none;
+  }
+
+  .faixas {
     display: flex;
     width: calc(100% - 100px);
     position: absolute;
     bottom: 70px;
     z-index: 50;
-    gap: 3vw;
     justify-content: center;
+    gap: 0;
+    justify-content: space-around;
+  }
 }
-
-.faixas p {
-    color: white;
-}
-
-.loading-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 20px;
-    color: var(--text);
-}
-
-@media screen and (max-width:900px) {
-    #cursor {
-        display: none;
-    }
-
-    .faixas {
-        display: flex;
-        width: calc(100% - 100px);
-        position: absolute;
-        bottom: 70px;
-        z-index: 50;
-        justify-content: center;
-        gap: 0;
-        justify-content: space-around
-    }
-}
-
-
 
 /*Versão 2*/
 html,
 body {
-    overscroll-behavior-y: contain;
+  overscroll-behavior-y: contain;
 }
 
 body {
-    background-color: var(--bg-color);
-    font-family: "AkkuratPro-Light";
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden;
+  background-color: var(--bg-color);
+  font-family: "AkkuratPro-Light";
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 main {
-    position: relative;
-    z-index: 1;
-    /* Colocar acima do teaser */
-    overflow-y: auto;
+  position: relative;
+  z-index: 1;
+  /* Colocar acima do teaser */
+  overflow-y: auto;
 }
 
 .hidden {
-    opacity: 0;
-    transition: opacity 1s ease;
-    pointer-events: none;
-    /* Evita interação quando oculto */
+  opacity: 0;
+  transition: opacity 1s ease;
+  pointer-events: none;
+  display: none;
+  /* Evita interação quando oculto */
 }
 
 .active {
-    opacity: 1;
-    transition: opacity 1s ease;
-    pointer-events: auto;
-    /* Permite interação quando visível */
+  opacity: 1;
+  transition: opacity 1s ease;
+  pointer-events: auto;
+  /* Permite interação quando visível */
 }
-
-
 
 /*Grelha*/
 .grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    padding-top: calc(var(--marginTop)* 1.5);
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  padding-top: calc(var(--marginTop) * 1.5);
 }
 
 .gridProgram {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    padding-top: 0 !important;
-    align-content: center;
-    height: calc(var(--vh, 1h)*100);
-    grid-gap: 0;
-    transition: width .2s ease-in-out;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  padding-top: 0 !important;
+  align-content: center;
+  height: calc(var(--vh, 1h) * 100);
+  grid-gap: 0;
+  transition: width 0.2s ease-in-out;
 }
 
 .col-10-desktop {
-    grid-column: 10 / 11;
+  grid-column: 10 / 11;
 }
 
 p {
-    font-size: var(--desktopFontSize);
-    color: white;
+  font-size: var(--desktopFontSize);
+  color: white;
 }
 
 .textAlignRight {
+  text-align: right;
+  padding-right: var(--desktopFontSize);
+}
+
+.textAlignRight1{
     text-align: right;
-    padding-right: var(--desktopFontSize);
 }
 
 .leftPad {
-    padding-left: var(--desktopFontSize);
+  padding-left: var(--desktopFontSize);
 }
 
 .rightPad {
-    padding-right: var(--desktopFontSize);
+  padding-right: var(--desktopFontSize);
 }
-
 
 /* Estilo inicial para as divs */
 
 #selvagemSubtitles {
-    display: none;
+  display: none;
 }
 
 #outroSelvagem {
-    display: none;
+  display: none;
 }
-
 
 /*Intro*/
 /* Configuração padrão para desktop */
 .teaser {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100vw;
-    height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
 }
 
 .teaser video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-
-
 #buttonStart p {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 #buttonStart {
-    position: absolute;
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
 }
-
-
 
 /*Experiência*/
 .faixaNum {
-    padding-right: var(--desktopFontSize);
+  padding-right: var(--desktopFontSize);
 }
 
 .faixaNum:hover {
-    font-weight: bold;
+  font-weight: bold;
 }
 .active-track {
-    font-weight: bold;
-  }
-  
+  font-weight: bold;
+}
+
 /* Define os estados de visibilidade */
 .hidden {
-    opacity: 0;
-    visibility: hidden; /* Garante que o elemento não fique clicável */
-    transition: opacity 0.5s ease, visibility 0.5s ease;
+  opacity: 0;
+  visibility: hidden; /* Garante que o elemento não fique clicável */
+  transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
 .visible {
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 0.5s ease, visibility 0.5s ease;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
 /*Subtitles*/
 .col-2-width {
-    grid-column: span 2;
+  grid-column: span 2;
 }
 
 .subtitlesContainer {
-    padding-top: 20vh;
-    opacity: 0.5;
+  padding-top: 20vh;
+  opacity: 0.5;
 }
 
 .subtitlesSelected {
-    opacity: 1 !important;
+  opacity: 1 !important;
 }
 
 .subtitlesSelected p {
-    text-wrap: pretty;
+  text-wrap: pretty;
 }
 
 .visibiltyNone {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 #legendas1 {
-    grid-row: 2;
-    grid-column: 2 / 4;
+  grid-row: 2;
+  grid-column: 2 / 4;
 }
 
 #legendas2 {
-    grid-row: 2;
-    grid-column: 4 / 6;
+  grid-row: 2;
+  grid-column: 4 / 6;
 }
 
 #legendas3 {
-    grid-row: 2;
-    grid-column: 6 / 8;
+  grid-row: 2;
+  grid-column: 6 / 8;
 }
 
 #legendas4 {
-    grid-row: 2;
-    grid-column: 8 / 10;
+  grid-row: 2;
+  grid-column: 8 / 10;
 }
 
 /* Ajustes para dispositivos móveis */
 @media (max-width: 768px) {
-    p {
-        font-size: var(--mobileFontSize);
-        color: white;
-    }
+  p {
+    font-size: var(--mobileFontSize);
+    color: white;
+  }
 
-    .mobileNone{
-        display: none!important;
-    }
+  .mobileNone {
+    display: none !important;
+  }
 
-    /* Intro */
-    .gridIntro {
-        grid-template-columns: repeat(3, 1fr) !important;
-        height: calc(var(--vh, 1h)* 100 - var(--marginTop));
-    }
+  /* Intro */
+  .gridIntro {
+    grid-template-columns: repeat(3, 1fr) !important;
+    height: calc(var(--vh, 1h) * 100 - var(--marginTop));
+  }
 
-    .gridIntro .col-10-desktop {
-        grid-column: 3 / 4;
-    }
+  .gridIntro .col-10-desktop {
+    grid-column: 3 / 4;
+  }
 
+  /* Programa */
+  .gridProgram {
+    grid-template-columns: repeat(4, 1fr) !important;
+  }
 
-    /* Programa */
-    .gridProgram {
-        grid-template-columns: repeat(4, 1fr) !important;
-    }
+  .divTop,
+  .divBottom {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
-    .divTop,
-    .divBottom {
-        grid-template-columns: repeat(4, 1fr);
-    }
+  .divRight,
+  .divLeft {
+    grid-template-rows: repeat(7, 1fr);
+  }
 
-    .divRight,
-    .divLeft {
-        grid-template-rows: repeat(7, 1fr);
-    }
+  /* Legendas */
+  .subtitlesContainer {
+    padding: 5vh var(--mobileFontSize) 0 var(--mobileFontSize);
+  }
 
-    /* Legendas */
-    .subtitlesContainer {
-        padding: 5vh var(--mobileFontSize) 0 var(--mobileFontSize);
-    }
+  .gridSubtitles {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
 
-    .gridSubtitles {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-    }
+  #legendas1 {
+    grid-row: 2;
+    grid-column: 1 / 5;
+  }
 
-    #legendas1 {
-        grid-row: 2;
-        grid-column: 1 / 5;
-    }
+  #legendas2 {
+    grid-row: 3;
+    grid-column: 1 / 5;
+  }
 
-    #legendas2 {
-        grid-row: 3;
-        grid-column: 1 / 5;
-    }
+  #legendas3 {
+    grid-row: 4;
+    grid-column: 1 / 5;
+  }
 
-    #legendas3 {
-        grid-row: 4;
-        grid-column: 1 / 5;
-    }
+  #legendas4 {
+    grid-row: 5;
+    grid-column: 1 / 5;
+  }
 
-    #legendas4 {
-        grid-row: 5;
-        grid-column: 1 / 5;
-    }
+  /* Outro */
+  .gridOutro {
+    grid-template-columns: repeat(3, 1fr) !important;
+    row-gap: calc(var(--marginMobile) * 2);
+  }
 
-    /* Outro */
-    .gridOutro {
-        grid-template-columns: repeat(3, 1fr) !important;
-        row-gap: calc(var(--marginMobile)*2);
-    }
-
-    .mobileRow2 {
-        grid-column: 1 / 2;
-    }
+  .mobileRow2 {
+    grid-column: 1 / 2;
+  }
 }
 
 .teaser video {
-    display: none;
+  display: none;
 }
 
 .teaser .activeVideo {
-    display: block;
+  display: block;
 }
 
-.introSelvagem .teaser video{
-    display: block!important;
+.introSelvagem .teaser video , .enterSelvagem .teaser video {
+  display: block !important;
+}
+
+button {
+  all: unset;
+  display: inline;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  width:100%;
+}
+
+input {
+  all: unset;
+  border-bottom: 1px solid white;
+  font-size: var(--desktopFontSize);
+    color: white;
+}
+
+input::placeholder { 
+    font-size: var(--desktopFontSize);
+    color: white;
+background-color: transparent; }
+
+#submitPassword:hover{
+    font-weight: bold;
 }
