--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
   font-family: "AkkuratPro-Light";
   padding: 0;
   margin: 0;
+  cursor: none;
 }
 
 main {
@@ -381,6 +382,8 @@ p {
     text-align: right;
 }
 
+
+
 .leftPad {
   padding-left: var(--desktopFontSize);
 }
@@ -398,12 +401,12 @@ p {
   left: 0;
   z-index: -1;
   width: 100vw;
-  height: 100vh;
+  height: calc(var(--vh, 1h) * 100);
 }
 
 .teaser video {
   width: 100%;
-  height: 100%;
+  height: calc(var(--vh, 1h) * 100);
   object-fit: cover;
   position: absolute;
   top: 0;
@@ -486,6 +489,45 @@ p {
   grid-column: 8 / 10;
 }
 
+.teaser video {
+    display: none;
+  }
+  
+  .teaser .activeVideo {
+    display: block;
+  }
+  
+  .introSelvagem .teaser video , .enterSelvagem .teaser video {
+    display: block !important;
+  }
+  
+  button {
+    all: unset;
+    display: inline;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+    width:100%;
+  }
+  
+  input {
+    all: unset;
+    border-bottom: 1px solid white;
+    font-size: var(--desktopFontSize);
+      color: white;
+  }
+  
+  input::placeholder { 
+      font-size: var(--desktopFontSize);
+      color: white;
+  background-color: transparent; 
+  }
+  
+  #submitPassword:hover{
+      font-weight: bold;
+  }
+  
+
 /* Ajustes para dispositivos móveis */
 @media (max-width: 768px) {
   p {
@@ -500,9 +542,8 @@ p {
   /* Intro */
   .gridIntro {
     grid-template-columns: repeat(3, 1fr) !important;
-    height: calc(var(--vh, 1h) * 100 - var(--marginTop));
-  }
-
+    height: calc(var(--vh, 1h)* 100 - var(--marginTop)* 1.5);
+}
   .gridIntro .col-10-desktop {
     grid-column: 3 / 4;
   }
@@ -516,6 +557,29 @@ p {
   .divBottom {
     grid-template-columns: repeat(4, 1fr);
   }
+
+  .divTop {
+    top: 0;
+  }
+  
+  .divBottom {
+    position: absolute;
+    bottom: 0;
+  }
+
+  .divRight,
+.divLeft {
+  width: 30px;
+}
+
+.divTop,
+.divBottom {
+  height: 30px;
+}
+
+.luzTitle{
+    text-align: right;
+}
 
   .divRight,
   .divLeft {
@@ -561,41 +625,11 @@ p {
   .mobileRow2 {
     grid-column: 1 / 2;
   }
-}
 
-.teaser video {
-  display: none;
-}
-
-.teaser .activeVideo {
-  display: block;
-}
-
-.introSelvagem .teaser video , .enterSelvagem .teaser video {
-  display: block !important;
-}
-
-button {
-  all: unset;
-  display: inline;
-  font: inherit;
-  color: inherit;
-  cursor: pointer;
-  width:100%;
-}
-
-input {
-  all: unset;
-  border-bottom: 1px solid white;
-  font-size: var(--desktopFontSize);
+  input::placeholder { 
+    font-size: var(--mobileFontSize);
     color: white;
+background-color: transparent; 
+}
 }
 
-input::placeholder { 
-    font-size: var(--desktopFontSize);
-    color: white;
-background-color: transparent; }
-
-#submitPassword:hover{
-    font-weight: bold;
-}
