--- a/style.css
+++ b/style.css
@@ -78,18 +78,23 @@ main {
   z-index: 500 !important;
 }
 
-.active-track {
+.divLeft div{
+width:40px!important;
+}
+
+.faixaTitle .faixaNum.active-track,
+.faixaTitle .faixaNum.active-track ~ p {
   font-weight: bold;
 }
 
 .divTop {
   position: absolute;
-  top: 30px;
+  top: 0;
 }
 
 .divBottom {
   position: absolute;
-  bottom: 30px;
+  bottom: 0;
 }
 
 .divTop div:last-child,
@@ -112,28 +117,28 @@ main {
   position: absolute;
   top: 0;
   height: calc(var(--vh, 1h) * 100);
-  width: 60px;
+  width: 40px;
   display: grid;
   grid-template-rows: repeat(7, 1fr);
   align-items: center;
+  justify-content: flex-start;
 }
 
 .divTop,
 .divBottom {
   width: 100vw;
-  height: 60px;
+  height: 40px;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  align-items: center;
 }
 
 .divTop div,
 .divBottom div {
   border-right: 1px solid white;
-  height: 80%;
+  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   transition: all 0.2s ease-in-out;
 }
 
@@ -141,12 +146,13 @@ main {
 .divLeft div {
   border-top: 1px solid white;
   height: 100%;
-  width: 80%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
+
 
 .divRight div.active,
 .divLeft div.active,
@@ -353,12 +359,12 @@ main {
 
 .gridProgram {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  padding-top: 0 !important;
-  align-content: center;
-  height: calc(var(--vh, 1h) * 100);
-  grid-gap: 0;
-  transition: width 0.2s ease-in-out;
+    grid-template-columns: repeat(10, 1fr);
+    padding-top: calc(var(--marginTop)* 3);
+    position: absolute;
+    top: 0;
+    width: 100vw !important;
+    height: calc(100vh - var(--marginTop)* 3);
 }
 
 .col-10-desktop {
@@ -373,6 +379,11 @@ p {
 .textAlignRight {
   text-align: right;
   padding-right: var(--desktopFontSize);
+}
+
+.textAlignLeft{
+  text-align: left;
+  padding-left: calc(var(--desktopFontSize)/4);
 }
 
 .textAlignRight1 {
@@ -407,8 +418,28 @@ p {
   left: 0;
 }
 
+#activediv{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(25, 25, 25);
+  position: absolute;
+  z-index: 50;
+  opacity: 50%;
+}
+
+#track1 {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  padding-top: calc(var(--marginTop)* 3);
+  height: 100vh;
+  border: 1px solid red; /* Adicionando uma borda para ver a área do grid */
+}
+
 .teaser .legendas {
-  object-fit: scale-down!important;
+  object-fit: scale-down !important;
+  grid-column: 3 / span 7 !important;  /* Alinha a legenda à terceira coluna e faz ela ocupar da 3ª à 10ª coluna */
+  position: fixed;
+  width: 100%;  /* Ou um valor fixo se preferir */
 }
 
 
@@ -432,6 +463,7 @@ p {
 .active-track {
   font-weight: bold;
 }
+
 
 /* Define os estados de visibilidade */
 .hidden {
@@ -524,25 +556,49 @@ input::placeholder {
 }
 
 #loading{
-  display:none
-}
-
-#activediv{
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(25, 25, 25);
+  display:none;
   position: absolute;
-  z-index: 50;
-  opacity: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-#faixaInteration1.hidden, #faixaInteration2.hidden {
-  display: none;
+
+
+.faixaTitle{
+  display: flex;
+  
 }
-#faixaInteration1.active, #faixaInteration2.active {
-  display: block;
+
+.trackPlayingdiv{
+  display: flex!important;
 }
+
+#faixaInteration1{
+  grid-column: 2 / 5;
+}
+
 .fade-out { opacity: 0; transition: opacity 1s ease-out; } .fade-in { opacity: 1; transition: opacity 1s ease-in; }
+
+#menuContent {
+  overflow: hidden;           /* Garante que o conteúdo oculto não apareça */
+  max-height: 0;              /* Começa recolhido */
+  transition: max-height 0.4s ease-in-out; /* Animação de altura */
+}
+
+#menuContent.expanded {
+  max-height: 500px;          /* Altura suficiente para exibir todo o conteúdo */
+}
+
+
+#menuToggle:hover{
+font-weight: bold;
+}
+
+
+#creditButton:hover{
+  font-weight: bold;
+}
 
 /* Ajustes para dispositivos móveis */
 @media (max-width: 768px) {
@@ -567,6 +623,13 @@ input::placeholder {
   /* Programa */
   .gridProgram {
     grid-template-columns: repeat(4, 1fr) !important;
+    display: grid;
+  padding-top: 0 !important;
+  align-content: center;
+  height: 100vh;
+  grid-gap: 0;
+  transition: width 0.2s ease-in-out;
+  width:100vw;
   }
 
   .divTop,
