--- a/style.css
+++ b/style.css
@@ -231,9 +231,15 @@ main {
   justify-content: center;
   align-items: flex-end;
   transition: all 0.2s ease-in-out;
+  position: relative;
 }
 
-.divLeft div, .divRight div{
+.divLeft p,
+.divRight p {
+  transform: rotate(-90deg) translate(50%, 0);
+}
+
+.divLeft div{
   justify-content: flex-start
 }
 
@@ -292,9 +298,18 @@ main {
 }
 
 .divRight p {
-  transform-origin: center;
+  transform-origin: left bottom;
+  transform: rotate(270deg) translate(0, 100%);
   text-align: center;
-  padding: 0;
+  margin: 0;
+}
+
+.divLeft p {
+  position: absolute;
+  left: 100%;
+  transform-origin: left bottom;
+  transform: rotate(270deg);
+  text-align: center;
   margin: 0;
 }
 
@@ -308,10 +323,6 @@ main {
   width: 100%;
 }
 
-.divLeft p,
-.divRight p {
-  transform: rotate(-90deg) translate(50%, 0);
-}
 
 .track {
   padding: 50px;
@@ -793,7 +804,7 @@ input::placeholder {
   .legendas{
     display: none;
   }
-  
+
   #legendas1 {
     grid-row: 2;
     grid-column: 1 / 5;
