--- a/style.css
+++ b/style.css
@@ -389,6 +389,7 @@ main {
 
 @media screen and (max-width: 900px) {
   #cursor {
+    display: none;
   }
 
   .faixas {
@@ -802,6 +803,9 @@ input::placeholder {
     grid-template-columns: repeat(4, 1fr);
   }
 
+  .legendas{
+    display: none;
+  }
 
   #legendas1 {
     grid-row: 2;
@@ -853,15 +857,14 @@ input::placeholder {
     top: 0;
     left: 0;
     transform: rotate(-90deg) translateY(-25%);
-}
-
-.teaser legendas {
-  width: 100vh;
-  height: 100vh;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: rotate(-90deg) translateY(-25%);
-}
+}/*
+  .teaser video {
+    width: 100vh;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotate(-90deg) translateY(-25%);
+}*/
 }
