--- a/style.css
+++ b/style.css
@@ -87,6 +87,12 @@ main {
   font-weight: bold;
 }
 
+.active-border {
+  border: 1px solid red;
+  transition: border 0.2s ease-in-out;
+}
+
+
 .divTop {
   position: absolute;
   top: 0;
