--- a/style.css
+++ b/style.css
@@ -849,34 +849,12 @@ input::placeholder {
   }
 
   .teaser .legendas {
-    object-fit: scale-down !important;
     position: absolute;
-    bottom: calc(100vh / 10);
-    /* right: 0; */
-    width: calc(100vh / 1.4);
-    height: auto;
-    transform: rotate(-90deg);
+    transform: rotate(-90deg) translate(-50%, -50%);
+    width: calc(100vh / 7* 5);
+    left: 0;
+    top:0;
 }
-
-  #legendas1 {
-    grid-row: 2;
-    grid-column: 1 / 5;
-  }
-
-  #legendas2 {
-    grid-row: 3;
-    grid-column: 1 / 5;
-  }
-
-  #legendas3 {
-    grid-row: 4;
-    grid-column: 1 / 5;
-  }
-
-  #legendas4 {
-    grid-row: 5;
-    grid-column: 1 / 5;
-  }
 
   /* Outro */
   .gridOutro {
