--- a/style.css
+++ b/style.css
@@ -844,18 +844,6 @@ input::placeholder {
     grid-template-columns: repeat(4, 1fr);
   }
 
-  .legendas{
-
-  }
-
-  .teaser .legendas {
-    position: absolute;
-    transform: rotate(-90deg) translate(-50%, -50%);
-    width: calc(100vh / 7* 5);
-    left: 0;
-    top:0;
-}
-
   /* Outro */
   .gridOutro {
     grid-template-columns: repeat(3, 1fr) !important;
@@ -882,7 +870,7 @@ input::placeholder {
     position: relative;
   }
 
-  .mediaTrack video {
+  .mediaTrack .video {
     width: 100vh;
     height: 100vh;
     object-fit: cover;
@@ -892,6 +880,15 @@ input::placeholder {
     transform: rotate(-90deg) translateY(-25%);
 }
 
+.mediaTrack .legendas{
+  width: calc(100vh / 7* 6);
+  height: auto;
+  object-fit: cover;
+  position: absolute;
+  top: 60px;
+  left: calc(var(--vh, 1h)* 100 / 7* 2);
+  transform: rotate(-90deg) translate(0%, 0%);
+}
 
 .divTop div:nth-child(6),
 .divBottom div:nth-child(6),
