--- a/style.css
+++ b/style.css
@@ -881,13 +881,15 @@ input::placeholder {
 }
 
 .mediaTrack .legendas {
-  width: calc(100vh / 7 * 6);
+  width: calc(100vh / 7 * 5);
   height: auto; 
   object-fit: cover;
   position: absolute;
-  top: calc(100vh / 7 * 2); 
-  left: 0; 
-  transform: rotate(-90deg) translateY(-100%); 
+  opacity: 1;
+  top:0;
+  left: 0;
+  transform-origin: 0px 0px;
+  transform: rotate(-90deg) translate(-85.7143vh, 16.667vw);
 }
 
 .divTop div:nth-child(6),
@@ -933,7 +935,5 @@ input::placeholder {
   --i: 3.5;
 }
 
-.legendas{
-  display: none;
-}
+
 }
